Graph capability processing WIP.